Aggiornato la gestione dei Mag